--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "laravel-vite-plugin": "^1.0.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
     "vite": "^5.1.2"
   },
   "dependencies": {
+    "cash-dom": "^8.1.5",
     "shiki": "^1.1.3"
   }
 }
