--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,11 +28,24 @@
             "group": "none"
         },
         {
+            "label": "Queue",
+            "type": "shell",
+            "command": "./artisan queue:work",
+            "problemMatcher": [],
+            "presentation": {
+                "reveal": "silent",
+                "focus": false,
+                "panel": "dedicated"
+            },
+            "group": "none"
+        },
+        {
             "label": "Dev",
             "problemMatcher": [],
             "dependsOn": [
                 "Backend",
                 "Frontend",
+                "Queue",
                 "Open Browser"
             ]
         },
