--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,12 @@
         "filipfonal/filament-log-manager": "^2.0",
         "guava/filament-icon-picker": "^2.0",
         "guzzlehttp/guzzle": "^7.2",
+        "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/scout": "^10.8",
         "laravel/tinker": "^2.8",
+        "meilisearch/meilisearch-php": "^1.6",
         "pxlrbt/filament-environment-indicator": "^2.0",
         "shuvroroy/filament-spatie-laravel-health": "^2.0",
         "spatie/laravel-activitylog": "^4.7",
