--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - 7700:7700
     environment:
       MEILI_ENV: development
+      MEILI_MASTER_KEY: masterkey
     volumes:
       - meili_data:/meili_data
 
