--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -42,7 +42,7 @@
         {
             "label": "Queue",
             "type": "shell",
-            "command": "./artisan queue:work",
+            "command": "./artisan horizon",
             "problemMatcher": [],
             "presentation": {
                 "reveal": "silent",
