--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,10 @@
         "guzzlehttp/guzzle": "^7.2",
         "http-interop/http-factory-guzzle": "^1.2",
         "laravel/framework": "^10.10",
+        "laravel/horizon": "^5.23",
         "laravel/sanctum": "^3.3",
         "laravel/scout": "^10.8",
+        "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.8",
         "meilisearch/meilisearch-php": "^1.6",
         "pxlrbt/filament-environment-indicator": "^2.0",
