--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,12 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/scout": "^10.8",
+        "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.8",
         "meilisearch/meilisearch-php": "^1.6",
         "pxlrbt/filament-environment-indicator": "^2.0",
         "shuvroroy/filament-spatie-laravel-health": "^2.0",
+        "socialiteproviders/keycloak": "^5.3",
         "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-health": "^1.26",
         "spatie/laravel-markdown": "^2.4",
